??.??.2005 version 1.2
######################
- fixed: crash when scanning unreadable directories (eg. over samba shares)
- improved: updated italian translation


18.01.2005 version 1.2-rc2
##########################
- improved: finally switched to taglib
  - removed dependency to id3lib and ogglibs
  - correct handling of all file types and tags that taglib can handle (eg. flac)
  - custom genres are allowed now
    (changed representation from int to string and added menu entry to fix an existing database)
- improved: consistency mode:
  - save tags immediately (after changing song attributes in song info dialog)
  - keep filenames consistent (also after changing song attributes in song info dialog)
  - keep directories consistent (also after changing song attributes in song info dialog)
- improved: application icon (thanks to Alessandro)
- improved: context menu -> go to Folder (menu shows available folders, samplers correctly treated)
- fixed: artsplayer crash (sorry for that one...)
- fixed: yammi becoming unresponsive if noatun not available (thanks to Bernhard)
- fixed: character conversion when reading characters from id3 tags (using fromLocal8Bit on reading tags)
- fixed: deleting files (moving to trash dir) if moving across partitions (thanks to Bernhard)
- fixed: deadlock when closing yammi while initialization
- fixed: restoring "guessing mode" setting
- fixed: crash (NPE) when reading layer information from corrupt mp3 files

13.12.2004 version 1.2-rc
#########################
- added: italian translation (thanks to Alessandro)
- added: spanish translation (thanks to Miguel)
- added: GStreamer support (experimental, thanks to Martin)

- added: reading ogg vorbis or id3 tags in *.flac files (no layer info(length, bitrate) yet)
- added: option to follow symlinks on scanning
- added: trying to read ogg vorbis tags in flac files
- updated: yammi handbook

- fixed: proper escaping of filenames for playing in artsplayer or noatun (eg. files containing '#')