@@ -1,15 +1,15 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
 <!DOCTYPE KDevPrjSession>
 <KDevPrjSession>
- <DocsAndViews NumberOfDocuments="10" >
+ <DocsAndViews NumberOfDocuments="6" >
   <Doc0 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/ChangeLog" >
-   <View0 line="2" Type="???" >
+   <View0 line="17" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc0>
   <Doc1 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/TODO" >
    <View0 line="31" Type="???" >
-    <AdditionalSettings Top="1" Width="1202" Attach="1" Height="795" Left="1" MinMaxMode="0" />
+    <AdditionalSettings Top="1" Width="1202" Attach="1" Height="811" Left="1" MinMaxMode="0" />
    </View0>
   </Doc1>
   <Doc2 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/MyYammiHowto.txt" >
@@ -28,30 +28,10 @@
    </View0>
   </Doc4>
   <Doc5 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/yammigui.cpp" >
-   <View0 line="2767" Type="???" >
-    <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
-   </View0>
-  </Doc5>
-  <Doc6 context="ctx_qt" NumberOfViews="1" URL="file:/usr/lib/qt3/doc/html/qkeyevent.html" >
-   <View0 Type="???" >
-    <AdditionalSettings Top="-10000" Width="1" Attach="1" Height="1" Left="-10000" MinMaxMode="0" />
-   </View0>
-  </Doc6>
-  <Doc7 NumberOfViews="1" URL="file:/usr/lib/qt3/include/qlistview.h" >
-   <View0 line="415" Type="???" >
-    <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
-   </View0>
-  </Doc7>
-  <Doc8 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/mylistview.h" >
-   <View0 line="41" Type="???" >
-    <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
-   </View0>
-  </Doc8>
-  <Doc9 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/mylistview.cpp" >
-   <View0 line="192" Type="???" >
+   <View0 line="3181" Type="???" >
     <AdditionalSettings Top="1" Width="1202" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
-  </Doc9>
+  </Doc5>
  </DocsAndViews>
  <pluginList>
   <kdevbookmarks>
